<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_activity_deals">Travel Deals</string>
    <string name="action_settings">Settings</string>
    <string name="title_sample_string">New York Vacation</string>
    <string name="desc_sample_string">The best Cruise Ever</string>
    <string name="price_sample_string">NGN400</string>
    <string name="help_string">Help</string>
    <string name="logout_string">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deal_image_string">Deal Image</string>
    <string name="upload_deal_image">Upload Deal Image</string>
    <string name="deal_description_string">Description</string>
    <string name="deal_price_string">Price</string>
    <string name="deal_title_string">Title</string>
    <string name="save_string">Save</string>
    <string name="update_cruise_string">Update</string>
    <string name="required_field">Input required</string>
    <string name="delete_string">Delete</string>
</resources>
