<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_new_deal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Fragments.NewDealFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/imageUploadLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cruise_image_input"
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/image_bg"
                android:contentDescription="@string/deal_image_string"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/select_cruise_image_btn"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:contentDescription="@string/upload_deal_image"
                android:scaleType="centerCrop"
                android:src="@drawable/upload_image_1" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/newDealLayout"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageUploadLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cruise_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deal_title_string"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cruise_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deal_description_string"
                    android:inputType="textMultiLine"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cruise_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deal_price_string"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_deal_btn"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_string"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/save_deal_btn"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_string"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</ScrollView>